--- a/booking/templates/room_list.html
+++ b/booking/templates/room_list.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <a href='/login'>Login</a>
     <title>Hotel Room List</title>
 </head>
 <body>
