--- a/booking/templates/room_list.html
+++ b/booking/templates/room_list.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <a href='/login'>Login</a>
+    {% if user.is_authenticated %}
+        <a href="{%url 'logout'%}"">Logout</a>
+    {%else%}
+        <a href='login/'>Login</a>
+    {%endif%}
     <title>Hotel Room List</title>
 </head>
 <body>
