--- a/booking/templates/room_view.html
+++ b/booking/templates/room_view.html
@@ -2,6 +2,9 @@
 
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet", a href="{% static 'css/main.css' %}">
+</head>
 <body>
 <header>
     <h1> Room: {{ room.room_number }} </h1>
