added style sheet and changed a little bit of formatting. To much to change with so little time though

--- a/booking/templates/auth.html
+++ b/booking/templates/auth.html
@@ -1,5 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang='en'>
+  <head>
+    <link rel="stylesheet", a href="{% static 'css/main.css' %}">
+  </head>
 <div id="content", name='content'>
   {%if user.is_authenticated%}
     {%block content%}
