--- a/booking/static/css/main.css
+++ b/booking/static/css/main.css
@@ -5,12 +5,23 @@ body{
     font-size: 1.3rem;
     letter-spacing: 1px;
     font-family: 'Arial', sans-serif;
-    background-color: #ffffff; 
+    background-color: wheat; 
 }
+
 h1 {
-  color: #c80a0a;
+  color: #FF4040;
 }
-h2, h3, h4, ul, li, p, input, label, button, footer{
+
+h2 {
+    font-size: 2.5rem;
+    color: #FF4040;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    height: 10vh; /* Set the body height to the viewport height */
+}
+
+h3, h4, ul, li, p, input, label, button, footer{
     margin: 0;
     padding: 0;
     font-family: 'Quicksand', sans-serif;
@@ -21,7 +32,8 @@ div {
   width: 300px; 
   border: 3px solid black;
   padding: 20px;
-  margin: 10px; /
+  margin: 10px; 
+    text-align: center;
 }
 
 ul{
@@ -30,7 +42,7 @@ ul{
 
 a{
   text-decoration: none;
-  color: #c80a0a;
+  color: #FF4040;
 }
 
 nav{
@@ -38,7 +50,7 @@ nav{
     justify-content: space-between;
     align-items: flex-end;
     margin-bottom: 20px;
-    background-color: #000000;
+    background-color: #a1a1a1;
     padding: 40px 0;
 }
 
@@ -74,14 +86,14 @@ form{
     width: 360px;
     margin: 0 auto;
     padding: 30px;
-    box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
+    box-shadow: 1px 2px 3px rgb(255, 255, 255,0.1);
     border-radius: 10px;
-    background: black;
+    background: white;
 }
 input{
     padding: 10px 12px;
     border-radius: 4px;
-    border: 1px solid #000000;
+    border: 1px solid #ffffff;
     font-size: 1em;
     width: 100%;
 }
@@ -90,77 +102,30 @@ label{
     margin: 20px 0 10px;
 }
 button{
-    margin-top: 30px;
-    border-radius: 36px;
-    background: #383838;
-    border:0;
+    margin-top: 25px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 10px;
+    background: #b0b0b0;
+    border: 3px solid #0f0f0f;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 0.8em;
     display: block;
-    padding: 10px 16px;
+    padding: 15px 32px;
     letter-spacing: 2px;
 }
 .error{
-    color: #ff0099;
+    color: #ffffff;
     margin: 10px 2px;
     font-size: 0.8em;
     font-weight: bold;
 }
 header{
     display: flex;
+    justify-content: space-between; /* Spread items to both ends */
     align-items: center;
-}
-header img{
-    width: 250px;
-    margin-right: 40px;
-}
-header h2{
-    font-size: 3em;
-    margin-bottom: 10px;
-}
-header h3{
-    font-size: 1.6em;
-    margin-bottom: 10px;
-    margin-left: 2px;
-    color: #999;
-}
-header .btn{
-    margin-top: 20px;
-    padding: 12px 18px;
-    text-transform: uppercase;
-    font-weight: bold;
-    display: inline-block;
-    font-size: 0.8em;
-}
-.recipes{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 30px;
-    row-gap: 80px;
-    margin: 80PX AUTO;
-    max-width: 1200px;
-}
-.recipe{
-    display: inline-block;
-    border-radius: 20px;
-    background: #ffffff;
-    position: relative;
-    text-align: center;
-    padding: 0 20px 30px 20px
-}
-.recipe img{
-    width: 100px;
-    margin: -30px auto 20px;
-}
-footer{
-    color: #ffffff;
-    background-color: #383838;
-    text-align: center;
-    margin-top: 120px;
-   text-align: center;
-    padding: 35px;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    background-color: #212121;
+    color: white; /* Add some padding for spacing */
+    padding: 10px;
 }
