--- a/booking/templates/registration/log_out.html
+++ b/booking/templates/registration/log_out.html
@@ -1,8 +1,17 @@
+{% load static %}
+
+<head>
+  <link rel="stylesheet", a href="{% static 'css/main.css' %}">
+</head>
+
+<h1>
 {% block title %}Logged out{% endblock %}
 {% block content %}
+</h1>
 
-Logged out
+<p>
 You have been successfully logged out.
 <a href="{%url 'rooms'%}"">Home</a>
+</p>
 
 {% endblock %}
