--- a/booking/templates/rental_form.html
+++ b/booking/templates/rental_form.html
@@ -26,7 +26,7 @@
     <label for="cvv">CVV:</label><br>
     <input type="text" id="cvv" name="cvv" value="CVV">
 </form>
-<body>
+<body style="background-color: wheat;">
     <div class="container">
         <div class="col-md-3">
         <form method="post">{% csrf_token %}
