--- a/booking/templates/room_list.html
+++ b/booking/templates/room_list.html
@@ -5,13 +5,15 @@
 <head>
     <link rel="stylesheet", a href="{% static 'css/main.css' %}">
     <meta charset="UTF-8">
-    <nav>
+    <header>
+    Welcome! Please select a room.
+        
     {% if user.is_authenticated %}
         <a href="{%url 'logout'%}"">Logout</a>
     {%else%}
         <a href='login/'>Login</a>
     {%endif%}
-    </nav>
+    </header>
     <title>Hotel Room List</title>
 </head>
 <body>
